the search results tend to pad themselves with their fixed height; remove the extra padding when there are results

--- a/app/assets/stylesheets/outfits/_edit.sass
+++ b/app/assets/stylesheets/outfits/_edit.sass
@@ -351,12 +351,13 @@ body.outfits-edit
     #preview-search
       bottom: 1.5em
       left: 0
-      margin-top: .5em
-      margin-bottom: 1em
       overflow: auto
-      padding: .5em 1em
+      padding: 1em 2em
       position: absolute
       width: 100%
+
+      &.has-results
+        padding-bottom: 0
     #footer
       bottom: 0
       left: 0
